--- a/lab/playground/containers/Dockerfile
+++ b/lab/playground/containers/Dockerfile
@@ -2,6 +2,6 @@ FROM nginx:mainline-alpine
 
 RUN rm /etc/nginx/conf.d/*
 
-COPY hello.conf /etc/nginx/conf.d/
+ADD hello.conf /etc/nginx/conf.d/
 
-COPY index.html /usr/share/nginx/html/
+ADD index.html /usr/share/nginx/html/
