--- a/lab/playground/containers/Dockerfile
+++ b/lab/playground/containers/Dockerfile
@@ -5,3 +5,5 @@ RUN rm /etc/nginx/conf.d/*
 ADD hello.conf /etc/nginx/conf.d/
 
 ADD index.html /usr/share/nginx/html/
+
+ADD images/image.png /usr/share/nginx/html
