--- a/lab/playground/containers/hello.conf
+++ b/lab/playground/containers/hello.conf
@@ -8,7 +8,7 @@ server {
     expires -1;
 
     location /images/ {
-        
+        try_files /image.png = 404;
     }
 
     sub_filter_once off;
