--- a/lab/playground/containers/hello.conf
+++ b/lab/playground/containers/hello.conf
@@ -2,13 +2,14 @@ server {
     listen 80;
     listen [::]:80;
 
-    root /usr/share/nginx/html;
-    try_files /index.html =404;
+    root /usr/share/nginx/html; #root directory
+    try_files /index.html =404; #/usr/share/nginx/html/index.html
 
     expires -1;
 
+    #the html file is looking for a /images/image.png file
     location /images/ {
-        
+        index image.png; #/usr/share/nginx/html/images/image.png
     }
 
     sub_filter_once off;
