--- a/lab/playground/containers/Dockerfile
+++ b/lab/playground/containers/Dockerfile
@@ -1,7 +1,9 @@
-FROM nginx:mainline-alpine
+FROM docker.io/nginx:mainline-alpine
 
 RUN rm /etc/nginx/conf.d/*
 
 ADD hello.conf /etc/nginx/conf.d/
 
 ADD index.html /usr/share/nginx/html/
+
+ADD images /usr/share/nginx/html/images
