--- a/lab/playground/containers/hello.conf
+++ b/lab/playground/containers/hello.conf
@@ -8,7 +8,8 @@ server {
     expires -1;
 
     location /images/ {
-        
+        root /usr/share/nginx/html/images/;
+
     }
 
     sub_filter_once off;
