Finished docker solution

--- a/lab/playground/containers/Dockerfile
+++ b/lab/playground/containers/Dockerfile
@@ -5,3 +5,7 @@ RUN rm /etc/nginx/conf.d/*
 ADD hello.conf /etc/nginx/conf.d/
 
 ADD index.html /usr/share/nginx/html/
+
+RUN mkdir /usr/share/nginx/html/images/
+
+COPY images/ /usr/share/nginx/html/images/
